# chipper8

./: Cargo.toml  README.md
.github/workflows/: cargo-check.yml  cargo-test.yml
roms/: README.md  key_display.rom
src/: command.rs  command_history.rs  emulator.rs  errors.rs  instructions.rs  lib.rs  machine.rs  main.rs  ui.rs
src/assembler/: mod.rs
src/assembler/parser/: mod.rs  tests.rs  token.rs
src/assembler/parser/tokens/: command.rs  tokens.rs
src/command/: machine_state.rs  meta_command.rs  mod.rs  tokens.rs
src/machine/: assembler.rs  config.rs  draw_options.rs  instructions.rs  machine.rs  mod.rs  stack.rs  types.rs
src/machine/instruction/: args.rs  instruction.rs  mod.rs  op_code.rs  opcode.rs  tests.rs
src/machine/instruction/instructions/: graphics.rs  mod.rs  (+2 more)
src/parser/: token.rs
src/parser/tokens/: command.rs  mod.rs  tokens.rs
src/parsing/: mod.rs  token.rs  tokens.rs
src/parsing/instructions/: graphics.rs  mod.rs  set.rs
src/ui/: bottom_bar.rs  command_history.rs  cpu.rs  image_builder.rs  index.rs  memory.rs  mod.rs  program_counter.rs  repl.rs  stack.rs  state.rs  table.rs  util.rs  windows.rs
src/ui/bottom_bar/: input.rs  mod.rs
src/ui/util/: formatting.rs  image_builder.rs  key_capture.rs  memory_display.rs  mod.rs  table.rs
src/ui/windows/: command_gui.rs  command_history.rs  display.rs  execution_status.rs  index.rs  instruction_gui.rs  keypad.rs  memory.rs  meta_command_gui.rs  mod.rs  registers.rs  repl.rs  timers.rs
tests/: machine_state.rs
tests/data/: bc.json  corax89.json  exit.json  init.json
tests/roms/: bc.rom  corax89.rom
(+17 files in other folders)
