[package]
name = "chipper8"
version = "0.1.0"
authors = ["Alex Thorne <alex@thorne.dev>"]
edition = "2021"
description = "A CHIP-8 interpreter in Rust"
repository = "https://github.com/fokoid/chipper8"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui_extras = "0.19.0"
eframe = "0.19.0"
ringbuffer = "0.9.0"
thiserror = "1.0.37"
clap = { version = "4.0.17", features = ["derive"] }
